New upstream version 8.5.15